Добавление russian-travel

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/pages/index.css">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Путешествия по России</title>
 </head>
 <body class="page">
   <header class="header">
     <a href="#" class="header__logo-link">
-      <img src="/images/header-logo.svg" alt="Логотип" class="header__logo-img">
+      <img src="images/header-logo.svg" alt="Логотип" class="header__logo-img">
     </a>
     <ul class="header__wrapper-lang">
       <li class="header__lang">
@@ -27,7 +28,7 @@
       <h1 class="lead__title">Путешествия<br/>по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках<br/>новостей, а здесь.</p>
       <figure class="lead__figure">
-      <img src="/images/lead-polka.jpg" alt="Купе_поезда" class="lead__image">
+      <img src="images/lead-polka.jpg" alt="Купе_поезда" class="lead__image">
       <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
     </figure>
     </section>
@@ -55,40 +56,40 @@
   <section class="main-photo">
     <ul class="main-photo__list">
       <li class="main-photo__item">
-        <img src="/images/photo-grid-train.jpg" alt="Вагон" class="main-photo__img">
+        <img src="images/photo-grid-train.jpg" alt="Вагон" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-atharva-tulsi.jpg" alt="Атарва" class="main-photo__img">
+        <img src="images/photo-grid-atharva-tulsi.jpg" alt="Атарва" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-tuman.jpg" alt="Туман" class="main-photo__img">
+        <img src="images/photo-grid-tuman.jpg" alt="Туман" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-sochi.jpg" alt="Сочи" class="main-photo__img">
+        <img src="images/photo-grid-sochi.jpg" alt="Сочи" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-arisa.jpg" alt="Ариса" class="main-photo__img">
+        <img src="images/photo-grid-arisa.jpg" alt="Ариса" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-baikal.jpg" alt="Байкал-1" class="main-photo__img">
+        <img src="images/photo-grid-baikal.jpg" alt="Байкал-1" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-elbrus.jpg" alt="Эльбрус" class="main-photo__img">
+        <img src="images/photo-grid-elbrus.jpg" alt="Эльбрус" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="main-photo__img">
+        <img src="images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="main-photo__img">
+        <img src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="main-photo__img">
+        <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="main-photo__img">
+        <img src="images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="main-photo__img">
       </li>
       <li class="main-photo__item">
-        <img src="/images/photo-grid-ergaki.jpg" alt="Эргаки" class="main-photo__img">
+        <img src="images/photo-grid-ergaki.jpg" alt="Эргаки" class="main-photo__img">
       </li>
     </ul>
   </section>
