--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </header>
   <main class="main">
     <section class="lead">
-      <h1 class="lead__title">Путешествия<br/>по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках<br/>новостей, а здесь.</p>
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__figure">
       <img src="images/lead-polka.jpg" alt="Купе_поезда" class="lead__image">
       <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
@@ -180,12 +180,10 @@
       </div>
   </section>
   <section class="cover">
-    <div class="cover__bachground">
-      <a  class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blanc">
-        <h2 class="cover__title">До Байкала <br/>«на собаках»</h2>
-        <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе <br/>— путешествие от столицы до Байкала<br/> на электричках.</h3>
+      <a  class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blanc">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
-    </div>
   </section>
 </main>
   <footer class="footer">
