--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="pages/index.css">
   <title>Путешествия по России</title>
@@ -28,7 +28,7 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__figure">
-      <img src="images/lead-polka.jpg" alt="Купе_поезда" class="lead__image">
+      <img class="lead__image" src="images/lead-polka.jpg" alt="Купе_поезда">
       <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
     </figure>
     </section>
@@ -37,19 +37,19 @@
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
         <li class="intro__item">
-          <a href="#" class="intro__link">Часовых поясов <span class="intro__link-number">11</span></a>
+          <p class="intro__link">Часовых поясов <span class="intro__link-number">11</span></p>
         </li>
         <li class="intro__item">
-          <a href="#" class="intro__link">Объектов природного наследия ЮНЕСКО <span class="intro__link-number">12</span></a>
+          <p class="intro__link">Объектов природного наследия ЮНЕСКО <span class="intro__link-number">12</span></p>
         </li>
         <li class="intro__item">
-          <a href="#" class="intro__link">Объектов культурного наследия ЮНЕСКО <span class="intro__link-number">16</span></a>
+          <p class="intro__link">Объектов культурного наследия ЮНЕСКО <span class="intro__link-number">16</span></p>
         </li>
         <li class="intro__item">
-          <a href="#" class="intro__link">Природных заповедников <span class="intro__link-number">105</span></a>
+          <p class="intro__link">Природных заповедников <span class="intro__link-number">105</span></p>
         </li>
         <li class="intro__item">
-          <a href="#" class="intro__link">Аэропортов <span class="intro__link-number">241</span></a>
+          <p class="intro__link">Аэропортов <span class="intro__link-number">241</span></p>
         </li>
       </ul>
   </section>
@@ -94,30 +94,30 @@
     </ul>
   </section>
   <section class="places">
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a class="place__link" href=" http://park-kosa.ru"  target="blanc" >park-kosa.ru</a>
+          <a class="place__link" href=" http://park-kosa.ru"  target="_blanc" >park-kosa.ru</a>
         </div>
         <img class="place__image" src="images/place-kosa.jpg" alt="коса">
-        <article class="place__text">
+        <div class="place__text">
           <p class="place__paragraph">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
           </p>
           <p class="place__paragraph">
             На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
           </p>
-        </article>
-      </div>
-      <div class="place">
+        </div>
+      </article>
+      <article class="place">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blanc">National Geographic</a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blanc">National Geographic</a>
         </div>
         <img class="place__image" src="images/place-kolsky.jpg" alt="кольский">
-        <article class="place__text">
+        <div class="place__text">
           <p class="place__paragraph">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -126,16 +126,16 @@
             Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
             в Мурманск.
           </p>
-        </article>
-      </div>
-      <div class="place">
+        </div>
+      </article>
+      <article class="place">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blanc">Facebook</a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blanc">Facebook</a>
         </div>
         <img class="place__image" src="images/place-altai.jpg" alt="алтай">
-        <article class="place__text">
+        <div class="place__text">
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России. 
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
@@ -143,16 +143,16 @@
           <p class="place__paragraph">
             Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
           </p>
-        </article>
-      </div>
-      <div class="place">
+        </div>
+      </article>
+      <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a class="place__link" href="https://vk.com/baikalmile" target="blanc">https://vk.com/baikalmile</a>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blanc">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="images/place-winter-baikal.jpg" alt="зимний байкал">
-        <article class="place__text">
+        <div class="place__text">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро 
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -161,26 +161,26 @@
             Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
           </p>
-        </article>
-      </div>
-      <div class="place">
+        </div>
+      </article>
+      <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a class="place__link" href="http://vodlozero.ru" target="blanc">http://vodlozero.ru/</a>
+          <a class="place__link" href="http://vodlozero.ru" target="_blanc">http://vodlozero.ru/</a>
         </div>
         <img class="place__image" src="images/place-karelia.jpg" alt="карелия">
-        <article class="place__text">
+        <div class="place__text">
           <p class="place__paragraph">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
-        </article>
-      </div>
+        </div>
+      </article>
   </section>
   <section class="cover">
-      <a  class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blanc">
+      <a  class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blanc">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
@@ -190,19 +190,19 @@
     <nav class="footer__navigation">
       <ul class="footer__link">
         <li class="footer__item">
-          <a class="footer__link" href="https://yandex.ru/maps" target="blanc">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/maps" target="_blanc">Карты</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="https://yandex.ru/pogoda" target="blanc">Погода</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda" target="_blanc">Погода</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="https://rasp.yandex.ru" target="blanc">Расписание</a>
+          <a class="footer__link" href="https://rasp.yandex.ru" target="_blanc">Расписание</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="https://calendar.yandex.ru" target="blanc">Календарь</a>
+          <a class="footer__link" href="https://calendar.yandex.ru" target="_blanc">Календарь</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="https://travel.yandex.ru" target="blanc">Путешествия</a>
+          <a class="footer__link" href="https://travel.yandex.ru" target="_blanc">Путешествия</a>
         </li>
       </ul>
     </nav>
