Внесение правок после ревью

--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="pages/index.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="pages/index.css"/>
     <title>Путешествия по России</title>
   </head>
   <body class="page">
     <header class="header">
       <a href="#" class="header__logo-link">
-        <img
-          src="images/header-logo.svg"
-          alt="Логотип"
-          class="header__logo-img"
-        />
+        <img src="images/header-logo.svg" alt="Логотип" class="header__logo-img"/>
       </a>
       <ul class="header__wrapper-lang">
         <li class="header__lang">
@@ -33,11 +29,7 @@
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
         <figure class="lead__figure">
-          <img
-            class="lead__image"
-            src="images/lead-polka.jpg"
-            alt="Купе_поезда"
-          />
+          <img class="lead__image" src="images/lead-polka.jpg" alt="Купе_поезда"/>
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -87,88 +79,40 @@
       <section class="main-photo">
         <ul class="main-photo__list">
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-train.jpg"
-              alt="Вагон"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-train.jpg" alt="Вагон" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-atharva-tulsi.jpg"
-              alt="Атарва"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-atharva-tulsi.jpg" alt="Атарва" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-tuman.jpg"
-              alt="Туман"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-tuman.jpg" alt="Туман" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-sochi.jpg"
-              alt="Сочи"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-sochi.jpg" alt="Сочи" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-arisa.jpg"
-              alt="Ариса"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-arisa.jpg" alt="Ариса" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-baikal.jpg"
-              alt="Байкал-1"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-baikal.jpg" alt="Байкал-1" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-elbrus.jpg"
-              alt="Эльбрус"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-elbrus.jpg" alt="Эльбрус" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-kondratiev.jpg"
-              alt="Кондратьев"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-kamchatka-1.jpg"
-              alt="Камчатка-1"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-kamchatka-2.jpg"
-              alt="Камчатка-2"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-baikal-2.jpg"
-              alt="Байкал-2"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="main-photo__img"/>
           </li>
           <li class="main-photo__item">
-            <img
-              src="images/photo-grid-ergaki.jpg"
-              alt="Эргаки"
-              class="main-photo__img"
-            />
+            <img src="images/photo-grid-ergaki.jpg" alt="Эргаки" class="main-photo__img"/>
           </li>
         </ul>
       </section>
@@ -177,11 +121,9 @@
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
-            <a class="place__link" href=" http://park-kosa.ru" target="_blank"
-              >park-kosa.ru</a
-            >
+            <a class="place__link" href=" http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="images/place-kosa.jpg" alt="коса" />
+          <img class="place__image" src="images/place-kosa.jpg" alt="коса"/>
           <div class="place__text">
             <p class="place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -203,18 +145,9 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
-            <a
-              class="place__link"
-              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-              target="_blank"
-              >National Geographic</a
-            >
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
-          <img
-            class="place__image"
-            src="images/place-kolsky.jpg"
-            alt="кольский"
-          />
+          <img class="place__image" src="images/place-kolsky.jpg" alt="кольский"/>
           <div class="place__text">
             <p class="place__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская
@@ -236,12 +169,7 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
-            <a
-              class="place__link"
-              href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-              target="_blank"
-              >Facebook</a
-            >
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="алтай" />
           <div class="place__text">
@@ -264,18 +192,9 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
-            <a
-              class="place__link"
-              href="https://vk.com/baikalmile"
-              target="_blank"
-              >https://vk.com/baikalmile</a
-            >
+            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
-          <img
-            class="place__image"
-            src="images/place-winter-baikal.jpg"
-            alt="зимний байкал"
-          />
+          <img class="place__image" src="images/place-winter-baikal.jpg" alt="зимний байкал"/>
           <div class="place__text">
             <p class="place__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -295,15 +214,9 @@
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <h3 class="place__url-heading">URL</h3>
-            <a class="place__link" href="http://vodlozero.ru" target="_blank"
-              >http://vodlozero.ru/</a
-            >
+            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
-          <img
-            class="place__image"
-            src="images/place-karelia.jpg"
-            alt="карелия"
-          />
+          <img class="place__image" src="images/place-karelia.jpg" alt="карелия"/>
           <div class="place__text">
             <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -320,11 +233,7 @@
         </article>
       </section>
       <section class="cover">
-        <a
-          class="cover__link"
-          href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="_blank"
-        >
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
@@ -337,44 +246,19 @@
       <nav class="footer__navigation">
         <ul class="footer__link">
           <li class="footer__item">
-            <a
-              class="footer__link"
-              href="https://yandex.ru/maps"
-              target="_blank"
-              >Карты</a
-            >
+            <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
           </li>
           <li class="footer__item">
-            <a
-              class="footer__link"
-              href="https://yandex.ru/pogoda"
-              target="_blank"
-              >Погода</a
-            >
+            <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank" >Погода</a>
           </li>
           <li class="footer__item">
-            <a
-              class="footer__link"
-              href="https://rasp.yandex.ru"
-              target="_blank"
-              >Расписание</a
-            >
+            <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
           </li>
           <li class="footer__item">
-            <a
-              class="footer__link"
-              href="https://calendar.yandex.ru"
-              target="_blank"
-              >Календарь</a
-            >
+            <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
           </li>
           <li class="footer__item">
-            <a
-              class="footer__link"
-              href="https://travel.yandex.ru"
-              target="_blank"
-              >Путешествия</a
-            >
+            <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
